ONTOLOGY-224 Fixed info banner not center-aligned

--- a/src/styles/_graphsearch.scss
+++ b/src/styles/_graphsearch.scss
@@ -12,6 +12,12 @@
   flex-direction: column;
   background: $white;
 
+  &-title {
+    font-weight: 700;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+  }
+
   &-bar {
     width: 100%;
     max-width: 400px;
